Inserção de conteúdo referente ao Github

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     </p>
     <img src="img/Git.PNG" alt="Diagrama GIT">
 
+    <h1>O que é o Github</h1>
+    <p>GitHub é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git. Ele permite que programadores, utilitários ou qualquer usuário cadastrado na plataforma contribuam em projetos privados e/ou Open Source de qualquer lugar do mundo.
+    </p>
+    <img src="img/GitHub-Logo.png" alt="Logo do Github" width="550px">
+
 </body>
 
 </html>
